testsuite/tests/overloadedrecflds/should_fail/overloadedrecfldsfail09.stderr

overloadedrecfldsfail09.hs:9:11: error:
    Ambiguous record updates not (yet) handled by Template Haskell
      x = 3
